--- a/packages/components/src/components/button/_mixins.scss
+++ b/packages/components/src/components/button/_mixins.scss
@@ -46,6 +46,7 @@
     flex-shrink: 0;
     width: rem(16px);
     height: rem(16px);
+    transition: right $duration--fast-01 motion(entrance, productive);
   }
 }
 
